--- a/server-side/package.json
+++ b/server-side/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mariadb": "^3.2.0",
+    "mysql2": "^3.6.0",
     "sequelize": "^6.32.1"
   }
 }
